mapper refactored